# infuse-api

./: Cargo.toml  Dockerfile  LICENSE  Makefile.toml  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  seed.rs
migration/src/entity/: mod.rs  prelude.rs  users.rs
migration/src/seed/: insert_user.rs  mod.rs
