[package]
name = "infuse-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = [ "adapter", "api", "kernel", "registry", "shared", "migration"]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
migration = { path = "./migration" }
async-trait = "0.1.83"
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["macros"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "2.0.1"
tokio = { version = "1.41.1", features = ["full"]}
bcrypt = "0.16.0"
tower = "0.5.1"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }

[dependencies]
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
adapter.workspace = true
api.workspace = true
shared.workspace = true
registry.workspace = true
migration.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
